# PigManager

./: .gitignore  index.html  package-lock.json  package.json
docs/: index.html
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.css  Sidebar.jsx
src/pages/: Console.css  Console.jsx  Controls.css  Controls.jsx  Dashboard.css  Dashboard.jsx  Downloader.css  Downloader.jsx  Eula.css  Eula.jsx  JavaManager.css  JavaManager.jsx  Mods.css  Mods.jsx  PanelOpts.css  PanelOpts.jsx  Players.css  Players.jsx  Plugins.css  Plugins.jsx  Properties.css  Properties.jsx  ResourcePack.css  ResourcePack.jsx  Settings.css  Settings.jsx
src/store/: serverStore.js  themeStore.js
src/styles/: global.css
