[package]
name = "pigmanager"
version = "0.1.0"
description = "PigManager - Minecraft Server Manager"
authors = ["9gunmo"]
edition = "2021"

[lib]
name = "pigmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
